# MediSense

./: CLAUDE_CLI_BUILD_PROMPT.md  MediSense_Product_Technical_Documentation.md  README.md  run.sh
backend/: .dockerignore  .env.example  .gitignore  API_AND_INTEGRATION.md  BACKEND_OVERVIEW.md  BUILD_REPORT.md  Dockerfile  GUIDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  medisense.db  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  audit_util.py  config.py  db.py  deps.py  errors.py  idempotency.py  main.py  models.py  schemas.py  seed.py  versions.py
backend/app/ai/: provider.py  zhipu.py
backend/app/data/: drug_reference.json  episodes.json
backend/app/db/: base.py  seed.py  session.py
backend/app/engine/: __init__.py  classify.py  drug_safety.py  embeddings.py  enrich.py  labels.py  ood.py  orchestrator.py  reasoner.py  reasoning.py  recommend.py  rules.py  triage.py  vector_index.py
backend/app/integration/: fhir.py
backend/app/learning/: active_learning.py  data_quality.py  registry.py
backend/app/observability/: logging.py  metrics.py
backend/app/routers/: audit.py  auth.py  clinical.py  encounters.py  episodes.py  health.py  outcomes.py  (+2 more)
backend/data/: code_maps.json  drug_reference.json  episodes.json
backend/docs/: AI_SETUP.md  GUIDE.md  PRODUCTION_SETUP.md  README.md
backend/scripts/: entrypoint.sh
backend/tests/: conftest.py  test_authz.py  test_contract.py  test_degraded.py  test_integration.py  test_latency.py  test_rules_golden.py
(+36 files in other folders)
