[project]
name = "medisense-backend"
version = "2026.06.1"
description = "MediSense — AI clinical decision-support backend (FastAPI)"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
# Engine/rules modules favour explicit clinical readability over some lint nits.
ignore = ["B008", "SIM108"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = false
plugins = []
exclude = ["alembic/", "tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app/engine", "app/security"]
